WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102972
Layout Test editing/undo/replace-by-span-then-remove.html is failing
https://bugs.webkit.org/show_bug.cgi?id=102972
Summary
Layout Test editing/undo/replace-by-span-then-remove.html is failing
Jian Li
Reported
2012-11-21 13:05:56 PST
The following layout test is failing on Mac editing/undo/replace-by-span-then-remove.html Probable cause:
http://trac.webkit.org/changeset/135421
Here is the output:
http://build.webkit.org/results/Apple%20Lion%20Debug%20WK1%20(Tests)/r135421%20(4772)/editing/undo/replace-by-span-then-remove-stderr.txt
Attachments
Patch
(1.62 KB, patch)
2012-11-21 13:09 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2012-11-21 13:09:26 PST
Created
attachment 175504
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-21 13:30:21 PST
Comment on
attachment 175504
[details]
Patch Clearing flags on attachment: 175504 Committed
r135428
: <
http://trac.webkit.org/changeset/135428
>
WebKit Review Bot
Comment 3
2012-11-21 13:30:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug