Update incorrect assertion in ImmutableElementAttributeData(MutableElementAttributeData). <http://webkit.org/b/102972>

Reviewed by Antti Koivisto.

Manipulation by editing code may cause an element to have mutable inline style, and this is fine.

Change the assertion to confirm that the inline style doesn't have a CSSOM wrapper attached,
which is where real problems would happen.

Fixes an assertion on editing/undo/replace-by-span-then-remove.html

* dom/ElementAttributeData.cpp:
(WebCore::ImmutableElementAttributeData::ImmutableElementAttributeData):


Canonical link: https://commits.webkit.org/121089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135428 268f45cc-cd09-0410-ab3c-d52691b4dbfc